# resonance-2d

./: .gitignore  CMakeLists.txt
assets/data/events/: events.json
assets/data/music/: music_states.json
assets/data/regions/: regions.json
assets/data/story/: story_anchors.json
cmake/: Warnings.cmake
docs/: branch-handoff.md  demo-walkthrough.md  runtime-context.md  verification-checklist.md
docs/plans/: 2026-03-13-audio-assets-design.md  2026-03-13-audio-assets-phase-1-implementation.md  2026-03-13-event-rotation-design.md  2026-03-13-event-rotation-plan.md  2026-03-13-resonance-2d-design.md  2026-03-13-resonance-2d-mvp.md  2026-03-13-runtime-story-anchors-design.md  2026-03-13-runtime-story-anchors.md  2026-03-13-task1-bootstrap-test-plan.md  2026-03-13-task10-overlay-test-plan.md  2026-03-13-task11-audio-playback-test-plan.md  2026-03-13-task12-story-anchor-test-plan.md  2026-03-13-task2-time-test-plan.md  2026-03-13-task3-content-test-plan.md  2026-03-13-task4-world-test-plan.md  2026-03-13-task5-audio-test-plan.md  2026-03-13-task6-event-test-plan.md  2026-03-13-task7-debug-test-plan.md  2026-03-13-task8-integration-test-plan.md  2026-03-13-task9-visual-runtime-test-plan.md  2026-03-14-audio-ambient-layers-design.md  2026-03-14-audio-ambient-layers-implementation.md  2026-03-14-memory-journal-design.md  2026-03-14-memory-journal-plan.md  2026-03-14-story-anchor-markers-design.md  2026-03-14-story-anchor-markers-plan.md  2026-03-16-audio-asset-tooling-design.md  2026-03-16-audio-asset-tooling-implementation.md  2026-03-16-audio-controls-design.md  2026-03-16-audio-controls-plan.md  2026-03-16-audio-event-mix-runtime-design.md  2026-03-16-audio-event-mix-runtime-plan.md  2026-03-16-editor-mode-design.md  2026-03-16-editor-mode-terminal-a-plan.md  2026-03-16-editor-mode-terminal-b-plan.md  2026-03-16-event-ducking-fade-plan.md  2026-03-16-event-mix-profiles-design.md  2026-03-16-event-mix-profiles-plan.md  2026-03-16-hidden-story-route-design.md  2026-03-16-hidden-story-route-plan.md  (+29 more)
engine/audio/: AudioBackend.h  AudioBackendSDL.cpp  AudioDirector.cpp  AudioDirector.h  AudioToneProfile.cpp  AudioToneProfile.h  MusicStateData.cpp  MusicStateData.h  WavAudioAsset.cpp  WavAudioAsset.h
engine/core/: Application.cpp  Application.h  FileSystem.cpp  FileSystem.h  Time.cpp  Time.h
engine/debug/: DebugOverlay.cpp  DebugOverlay.h  MemoryJournalEntry.h  TraceLog.cpp  TraceLog.h
engine/editor/: EditorDocument.cpp  EditorDocument.h  WorldWorkspaceState.cpp  WorldWorkspaceState.h
engine/event/: EventContext.h  EventData.cpp  EventData.h  EventDirector.cpp  EventDirector.h
engine/world/: RegionData.cpp  RegionData.h  StoryAnchorData.cpp  StoryAnchorData.h  Trigger.cpp  Trigger.h  World.cpp  World.h
game/demo/: DebugRoute.h  DemoScene.cpp  DemoScene.h  WorldWorkspaceLayout.h  WorldWorkspaceRenderModel.h  WorldWorkspaceViewModel.h  main.cpp
tests/audio/: test_audio_asset_validator.py  test_audio_backend_controls.cpp  test_audio_state.cpp  test_audio_tone_profile.cpp  test_generate_audio_assets.py  test_wav_audio_asset.cpp
tests/core/: test_time.cpp
tests/data/: test_content_load.cpp  test_demo_slice.cpp  test_story_anchor_content.cpp  test_validate_assets_schema.py
tests/debug/: test_overlay_panel.cpp  test_trace_log.cpp
tests/demo/: test_demo_editor_save.cpp  test_demo_event_rotation.cpp  test_demo_runtime.cpp  test_demo_visual_state.cpp  test_event_audio_emphasis.cpp  test_journal_overlay.cpp  test_memory_journal.cpp  test_memory_unlock_event.cpp  test_multi_memory_event_unlock.cpp  test_story_anchor_audio_focus.cpp  test_story_anchor_interaction.cpp  test_story_anchor_visuals.cpp  test_three_stage_memory_chain.cpp
tests/editor/: test_editor_document.cpp  test_world_workspace_state.cpp
tests/event/: test_event_director.cpp
tests/smoke/: test_startup.cpp
tests/world/: test_region_switch.cpp
tools/: generate_audio_assets.py  validate_assets.py
